package code.controller.event;

/** Tipizza gli eventi generati dal controller */
public interface ControllerEvent {}
