package code.controller.event;

/** Tipizza l'evento GameResumed */
public record GameResumed() implements ControllerEvent{}
