package code.controller.event;

/** Tipizza l'evento StopGame */
public record StopGame() implements ControllerEvent {}
