package code.model.context;

/** Modella l'evento PlayerDied */
public record PlayerDied(long nanos) implements ModelState {}
