package code.model.context;

/** Modella l'evento StopSimulation*/
public record StopSimulation(long nanos) implements ModelState {}
