package code.view.menu;

public record CloseGame() implements MenuEvent {}
