package code.view.menu.event;

/** Record per l'evento GamePanelRequested */
public record GamePanelRequested(String playerName) implements MenuEvent {}
