package code.view.menu.event;

/** Record per l'evento InputBoxMenuRequested */
public record InputBoxMenuRequested() implements MenuEvent {}
