package code.view.menu.event;

/** Record per l'evento LeaderboardMenuRequested */
public record LeaderboardMenuRequested() implements MenuEvent {}
