package code.view.menu.event;

/** Record per l'evento PlatformResetRequested */
public record PlatformResetRequested() implements MenuEvent {}
