package code.view.menu.event;

/** Record per l'evento PuzzleMenuClosed */
public record PuzzleMenuClosed() implements MenuEvent {}
