package code.view.menu.event;

/** Record per l'evento RobotDisableRequested */
public record RobotDisableRequested() implements MenuEvent {}
