package code.view.menu.event;

/** Record per l'evento SecondaryMenuClosed */
public record SecondaryMenuClosed() implements MenuEvent {}
