package code.view.menu.event;

/** Record per l'evento TerminalClosed */
public record TerminalClosed() implements MenuEvent {}
